--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,10 @@
     </scm>
 
     <properties>
-        <version.lombok>1.18.2</version.lombok>
-        <version.poi>3.17</version.poi>
+        <version.lombok>1.18.6</version.lombok>
+        <version.poi>4.0.1</version.poi>
         <version.commons-lang3>3.8.1</version.commons-lang3>
-        <version.expression>1.2.3</version.expression>
+        <version.expression>1.3.0-SNAPSHOT</version.expression>
     </properties>
 
     <dependencies>
@@ -100,6 +100,19 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${version.lombok}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.0.1</version>
