--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.developframework</groupId>
     <artifactId>excel-io</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
 
     <name>Excel IO</name>
     <url>https://github.com/developframework/excel-io</url>
@@ -40,10 +40,11 @@
     </scm>
 
     <properties>
-        <version.lombok>1.18.6</version.lombok>
+        <version.lombok>1.18.8</version.lombok>
         <version.poi>4.0.1</version.poi>
         <version.commons-lang3>3.8.1</version.commons-lang3>
-        <version.expression>1.3.0-SNAPSHOT</version.expression>
+        <version.expression>1.3.2</version.expression>
+        <version.develop-toolkit>1.0.2-SNAPSHOT</version.develop-toolkit>
     </properties>
 
     <dependencies>
@@ -72,6 +73,11 @@
             <groupId>com.github.developframework</groupId>
             <artifactId>expression</artifactId>
             <version>${version.expression}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.developframework</groupId>
+            <artifactId>develop-toolkit-base</artifactId>
+            <version>${version.develop-toolkit}</version>
         </dependency>
     </dependencies>
 
@@ -102,7 +108,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
