--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,10 @@
 
     <properties>
         <version.lombok>1.18.20</version.lombok>
-        <version.poi>4.1.0</version.poi>
+        <version.poi>4.1.2</version.poi>
         <version.commons-lang3>3.9</version.commons-lang3>
         <version.expression>1.5.1</version.expression>
-        <version.develop-toolkit>1.0.3</version.develop-toolkit>
+        <version.develop-toolkit>1.0.6-SNAPSHOT</version.develop-toolkit>
     </properties>
 
     <dependencies>
@@ -99,6 +99,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <source>11</source>
+                    <target>11</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
