--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,11 @@
     <distributionManagement>
         <snapshotRepository>
             <id>hclc aliyun nexus</id>
-            <url>http://nexus.hclcaliyun.com:8082/repository/maven-snapshots/</url>
+            <url>http://47.118.55.133:8082/repository/maven-snapshots/</url>
         </snapshotRepository>
         <repository>
             <id>hclc aliyun nexus</id>
-            <url>http://nexus.hclcaliyun.com:8082/repository/maven-releases/</url>
+            <url>http://47.118.55.133:8082/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 
